--- a/client/index.html
+++ b/client/index.html
@@ -3,3 +3,8 @@
 <link rel="stylesheet" href="/bundle.css" />
 <main></main>
 <script src="/bundle.js"></script>
+<script
+    src="https://www.google.com/recaptcha/api.js?&render=explicit"
+    async
+    defer
+></script>
