--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 <main></main>
 <script src="/bundle.js"></script>
 <script
-    src="https://www.google.com/recaptcha/api.js?&render=explicit"
+    src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
     async
     defer
 ></script>
